# AI-Project

./: .gitignore  INSTALL.md  README.md  RUNNING.md  docker-compose.yml  setup.bat  setup.sh  stop.bat  stop.sh
.github/workflows/: ci.yml
backend/: Dockerfile  SCRAPING_SETUP.md  ingest_sample_data.py  pyproject.toml
backend/backend_app/: INSTALL_BACKEND.txt  main.py
backend/backend_app/api/: schemas.py  v1.py
backend/backend_app/services/: chromadb_service.py  controller.py  kg.py  ollama_service.py  pinecone_service.py  retrieval.py  scraper.py
backend/tests/: test_api.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/chat/: ChatBot.tsx  PolicyCrafter.tsx  page.tsx
frontend/app/web-scraper/: page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  PremiumSidebar.tsx  SettingsDialog.tsx  Sidebar.tsx  ThemeDemo.tsx  ThemeToggle.tsx  app-sidebar.tsx  nav-secondary.tsx  nav-user.tsx  site-header.tsx
infra/: k8s-placeholders.md
